<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETA</string>
    <string name="action_settings">Settings</string>
    
    <!-- Buttons -->
    <string name="bt_send_eta">Send ETA</string>
    <string name="bt_signup">Signup</string>
    <string name="bt_signin">Signin</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_add_contact">Add Contact</string>
    <string name="bt_import_contact">Import Contact</string>
    <string name="bt_get_location">Get Location</string>
    <string name="bt_enable_net_con">Enable network</string>
    <string name="bt_invite">Invite</string>
     
    <!-- CheckBox -->
    <string name="cb_show_password">Show password</string>
    
    <!-- Description for various view item -->
    <string name="iv_send_eta">Send ETA button</string>
    <string name="iv_contact_status">ETA registration status of contact</string>
    
    <!-- Text view -->
    <string name="tv_contact_name">contact name</string>
    <string name="tv_signup">Signup</string>
    <string name="no_contact">Add contacts</string>
    <!-- Image view -->
    <string name="iv_contact_image_desc">ETA receiver contact image</string>
    <string name="map_marker">ETA map marker</string>
    <!-- Hints -->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_contact_name">Contact name</string>
    <string name="hint_contact_phone">Contact phone</string>
    <string name="hint_invite_msg">Invite message</string>
    
    <!-- Menu -->
    <string name="action_invite_sms">Invite</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="action_import_contact">Import Contact</string>
    
    <!-- Misc. -->
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="map_marker_details_placeholder">Sender details</string>
    <string name="map_market_eta_placeholder">ETA: 2 mins</string>
    <string name="map_market_current_address">Currently near:</string>
    <string name="map_marker_address_placeholder">Address line1\nAddress line2\nAddress line3</string>
    <string name="name_placeholder">Some name</string>
    <string name="phone_placeholder">5551112000</string>
    
    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    
</resources>
