<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <EditText 
        android:id="@+id/et_signup_name"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name" 
        android:layout_marginTop="30dip"
        android:imeOptions="actionNext" 
        />
    <EditText 
        android:id="@+id/et_signup_phone"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_signup_name"
        android:hint="@string/hint_phone" 
        android:layout_marginTop="35dip"
        android:imeOptions="actionNext" 
        />
    <EditText 
        android:id="@+id/et_signup_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_signup_phone"
        android:hint="@string/hint_email" 
        android:layout_marginTop="35dip" 
        android:imeOptions="actionNext"
        />
    <EditText 
        android:id="@+id/et_signup_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_signup_email"
        android:hint="@string/hint_password" 
        android:layout_marginTop="35dip"
        android:imeOptions="actionNext" 
        />
    <EditText 
        android:id="@+id/et_signup_confirm_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_signup_password"
        android:hint="@string/hint_confirm_password" 
        android:layout_marginTop="35dip"
        android:imeOptions="actionNext" 
        />
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_signup_confirm_password"
        android:layout_marginTop="35dip"
        android:orientation="horizontal">
        <Button 
        android:id="@+id/bt_signup_cancel"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/button_style"
        android:textColor="#FF743D"
        android:textSize="25sp"
        android:text="@string/bt_cancel"  
        />
     <Button 
        android:id="@+id/bt_signup"
        android:onClick="onClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginStart="20dip"
        android:layout_marginLeft="20dip"
        android:background="@drawable/button_style"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:text="@string/bt_signup"  
        />
     </LinearLayout>
</RelativeLayout>
