<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add_contact"
        android:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:icon="@drawable/ic_menu_add_contact"
        android:title="@string/action_add_contact"/>
    <item
        android:id="@+id/action_import_contact"
        android:showAsAction="ifRoom"
         android:orderInCategory="2"
        android:icon="@drawable/ic_menu_import_contact"
        android:title="@string/action_import_contact"/>
     <item
        android:id="@+id/action_invite"
        android:showAsAction="ifRoom"
         android:orderInCategory="3"
        android:icon="@drawable/ic_menu_invite"
        android:title="@string/action_invite"/>
     <item
        android:id="@+id/action_logout"
        android:showAsAction="ifRoom"
         android:orderInCategory="4"
        android:icon="@drawable/ic_menu_logout"
        android:title="@string/action_logout"/>
</menu>