<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_invite_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_contact_phone"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/et_invite_msg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:singleLine="false"
        android:gravity="top"
        android:hint="@string/hint_invite_msg"
        android:inputType="textMultiLine"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_invite_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:onClick="onClick"
            android:layout_margin="10dp"
            android:paddingEnd="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingStart="30dp"
            android:text="@string/bt_cancel"
            android:textColor="#FF743D"
            android:textSize="17sp" />

        <Button
            android:id="@+id/bt_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_style"
            android:onClick="onClick"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/bt_invite"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>