<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_signin_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dip"
            android:hint="@string/hint_phone"
            android:imeOptions="actionNext"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dip"
            android:hint="@string/hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bt_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dip"
            android:background="@drawable/button_style"
            android:onClick="onClick"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/bt_signin"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/tv_signup"
        android:textColor="#0000FF"
        android:textSize="25sp"
        android:textStyle="italic" />

</RelativeLayout>